Выполнить групповой проект спринта.